<resources>
    <string name="app_name">Herag Elawal</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account </string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="advertise_now_for_free">Advertise now for free</string>
    <string name="search_in_that_department">search in that department</string>
    <string name="no_adversiment_found">No ads to display</string>
    <string name="Categories">Categories</string>
    <string name="companies">companies</string>
    <string name="my_Advdersiment">My ads</string>
    <string name="favourite">fav</string>
    <string name="chat">Chat</string>
    <string name="name">name</string>
    <string name="comments">Comment</string>
    <string name="companies_category">Companies category</string>
    <string name="no_company_found">No Company Found</string>
    <string name="number_of_ads">Number of ads</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="location">Location</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="type_a_messge">Type A Message</string>
    <string name="main_menue">Main Menu</string>
    <string name="add_your_adversiment_for_free">Add your ad for free</string>
    <string name="change_language">Change language</string>
    <string name="about_herage">About Herage</string>
    <string name="add_company">Add Company</string>
    <string name="company_name">Company Name</string>
    <string name="detials">Details</string>
    <string name="maximum_of_150_characters">Maximum of 150 characters</string>
    <string name="register">register</string>
    <string name="upload_image">Upload Image</string>
    <string name="please_add_at_least_one_image_the_more_pictures_you_add_the_more_chances_the_customer_will_buy_the_product">Please add at least one image. The more pictures you add, the more chances the customer will buy the product</string>
    <string name="advertising_catogry">Advertising Catogry</string>
    <string name="catogry_filters">Filters of category</string>
    <string name="name_of_the_ad_in_arabic">Name of the ad in Arabic</string>
    <string name="name_of_the_ad_in_english">Name of the ad in English</string>
    <string name="ad_description_in_arabic">Ad description in Arabic</string>
    <string name="ad_description_in_english">Ad description in English</string>
    <string name="ads_photos">Ads Photos</string>
    <string name="add_ads">Add Ad</string>
    <string name="the_more_you_enter_the_correct_ad_information">Enter the ad information correctly,so your ad can be viewed more by people ,we will use the number you registered with so we can allow user to call you or sms you</string>
    <string name="maximum_of_40_characters">Maximum of 40 characters</string>
    <string name="ad_types">Ad Types</string>
    <string name="sections">Sections</string>
    <string name="about">About</string>
    <string name="all_rights_reserved_for_herage_elawal">All Rights Reserved For Herage Elawal</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="send_us_email">Send Us Email</string>
    <string name="instructions_for_use">Instructions for use</string>
    <string name="ads_for_new_and_old_camera_in_haraj_i_bought_now">Ads for new and old camera in Haraj I bought now</string>
    <string name="time">Time</string>
    <string name="map">map</string>
    <string name="adversiment_detials">Advertisement Details</string>
    <string name="company">Company</string>
    <string name="views">Views :</string>
    <string name="number_of_followers">Number of followers :</string>
    <string name="follow">Follow</string>
    <string name="characteristics">Characteristics</string>
    <string name="open_map">Open Map</string>
    <string name="ads_descreption">Ad description</string>
    <string name="share_in">Share in</string>
    <string name="like">Like</string>
    <string name="report">Report</string>
    <string name="commentss">Comments</string>
    <string name="more_comments">More Comments</string>
    <string name="related_products">Related Products</string>
    <string name="other_user_ads">Other user Ads</string>
    <string name="show_all">Show All</string>
    <string name="filter">Filter</string>
    <string name="ranking">Ranking</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="reg_with_ph">Registration Before using this service, please register with your mobile number within Saudi Arabia</string>
    <string name="code">Code</string>
    <string name="enter_ph_in_en">Enter your number without the country code in english</string>
    <string name="blokced">User is blocked</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="properties">Properties</string>
    <string name="no_comments">No comments</string>
    <string name="no_property">No property</string>
    <string name="no_phone">No phone number</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="since">since</string>
    <string name="followers">followers:</string>
    <string name="no_name">No name</string>
    <string name="more_details">More details :</string>
    <string name="subcategories">SubCategories</string>
    <string name="all_department">All department</string>
    <string name="order_by">Order by</string>
    <string name="list">List</string>
    <string name="square">Square</string>
    <string name="no_search_result">No search result</string>
    <string name="search_results">Search results</string>
    <string name="all_dept">All dept</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="result">Results</string>
    <string name="from">From</string>
    <string name="no_categories_to_display">No categories to display</string>
    <string name="search_for_company">Search for company</string>
    <string name="view">View</string>
    <string name="no_companies">No companies</string>
    <string name="ad">ad</string>
    <string name="sms">Sms</string>
    <string name="sign_out">Sign out</string>
    <string name="share_text">I recommended downloading #Heraj #Alawal ,Heraj #Alawal is free application to #buy and #sell everything #cars ,property #car plat , mobile number and more download #Heraj #Alawal from the following link :</string>
    <string name="sms_us">Sms us</string>
    <string name="email_us">Email us</string>
    <string name="website">Website</string>
    <string name="call_us">Call</string>
    <string name="no_email">No email for contacting</string>
    <string name="no_terms">No terms of use</string>
    <string name="no_website">No website link</string>
    <string name="repo_sent">the report was sent before</string>
    <string name="report2">Report</string>
    <string name="help_us_to_understand_the_problem">Help us to understand the problem</string>
    <string name="why_don_t_you_want_to_see_this">Why don\'t you want to see this ?</string>
    <string name="ch_reason">Choose reason</string>
    <string name="no_reasons">No reasons</string>
    <string name="will_review">Will review comment by admin</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="max_150_characters">max 150 characters</string>
    <string name="ch_cat">Choose Category</string>
    <string name="wil_rev_req">Will review your request by admin</string>
    <string name="add_photo">Add photo</string>
    <string name="category">Category</string>
    <string name="ad_name">Ad name</string>
    <string name="ad_price">Ad price</string>
    <string name="ad_details">Ad details</string>
    <string name="city">City</string>
    <string name="sub_category">Sub category</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_type">Choose type</string>
    <string name="ch">Choose</string>
    <string name="select">Select</string>
    <string name="video">Select video</string>
    <string name="select_picture">Select picture</string>
    <string name="all_filter_ched">All filters selected</string>
    <string name="ch_filters">Choose filters</string>
    <string name="ch_1_img">Choose at least 1 image</string>
    <string name="approved">Approved</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="no_conversation_to_display">No conversation to display</string>
    <string name="just_now">Just Now</string>
</resources>