<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:id="@+id/view"
    android:background="@color/black_trans"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >
        <Button
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/select_picture"
            />

        <Button
            android:id="@+id/btnVideo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/video"
            android:layout_marginTop="5dp"
            />


        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>


</FrameLayout>