<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="lang"
            type="String" />


    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray3"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                android:rotation='@{lang.equals("en")?180:0}'
                android:src="@drawable/ic_right_arrow"
                android:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/add_company"
                android:textColor="@color/white"
                android:textSize="16sp"

                />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/ads_photos"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    >
                    <ImageView
                        android:id="@+id/imageSelectPhoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_add_button"
                        android:tint="@color/colorPrimary"

                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/please_add_at_least_one_image_the_more_pictures_you_add_the_more_chances_the_customer_will_buy_the_product"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:lineSpacingExtra="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/advertising_catogry"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"

                    android:background="@drawable/edt_bg_white"
                    >

                </Spinner>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/catogry_filters"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"

                    android:background="@drawable/edt_bg_white"
                    >

                </Spinner>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/name_of_the_ad_in_arabic"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edt_bg_white"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/name_of_the_ad_in_english"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edt_bg_white"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/maximum_of_40_characters"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/ad_description_in_arabic"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edt_bg_white"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:inputType="textMultiLine"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/ad_description_in_english"
                    android:textColor="@color/black"
                    android:textSize="15sp"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edt_bg_white"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:inputType="textMultiLine"

                    />


                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/add_ads"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/the_more_you_enter_the_correct_ad_information_the_more_the_viewership_of_the_ad_will_be_used_by_your_phone_number_so_that_the_client_can_call_you_or_send_you_a_message"
                    android:textColor="@color/black"
                    android:textSize="15sp"
android:lineSpacingExtra="10dp"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
